--- a/structured.tex
+++ b/structured.tex
@@ -603,7 +603,7 @@ columns contains the names of the variables, in this case the column \emph{eleme
 
 To fix this issue, we must first decide which column contains the names of the variables.
 Then, we must lengthen the table in function of the variables (and potentially their
-names), as seen in \cref{tab:tidy3a}.  Aftwards, we widen the table in function of their names.  Finally, we remove
+names), as seen in \cref{tab:tidy3a}.  Afterwards, we widen the table in function of their names.  Finally, we remove
 implicit information, as seen in \cref{tab:tidy3b}.
 
 \begin{tablebox}[label=tab:tidy3a]{Partial solution to tidy \cref{tab:messy3}. Note that
