--- a/structured.tex
+++ b/structured.tex
@@ -232,7 +232,7 @@ dependency of $R$.  The PJNF guarantees that the
 table cannot be decomposed without losing information (except by decompositions based on
 keys).
 
-Note that the ideia behind the definition of BCNF and 4NF are slightly different from the
+Note that the idea behind the definition of BCNF and 4NF are slightly different from the
 PJNF.  In fact, if we consider that for each key dependency implies a join dependency, the
 relation is in the so-called overstrong projection-join normal
 form\footfullcite{Fagin1979}.  Such a level of normalization does not improve data storage
